# MediaContainer

./: .geminiignore  .gitignore  ARCHITECTURE.md  DEVELOPER_GUIDE.html  DEVELOPER_GUIDE.md  DOCUMENTATION_GUIDE.md  FULL_SESSION_SUMMARY.md  Makefile  SESSION_SUMMARY.md  eval_new_fixtures.py  eval_sort.py  note  pyproject.toml
m5/: classify.py  cli.py  grouper.py
managedsettings/: ARCHITECTURE.md  __init__.py  settings.py
mediacontainer/: ARCHITECTURE.md  __init__.py  baked-in-rules.json  cli.py  logger.py  media_container.py  parser.py  visual.py
sub_projects/sysloglogger/: ARCHITECTURE.md  Makefile  __init__.py  protocol.py
sysloglogger/: __init__.py  logger.py
tests/: __init__.py  test_classify.py  test_grouper.py  test_media_container.py  test_parser.py  test_regression.py  test_settings.py  test_visual.py
tests/fixtures/: ambiguous_splits.dir  bracketed_gallery.dir  bracketed_index.dir  case_sensitivity.dir  complex_dots_underscores.dir  complex_multipart_split.dir  dashed_stems.dir  dominant_separator.dir  image_set.dir  many_accessories.dir  metacharacter_filenames.dir  mid_string_sequence.dir  misleading_extensions.dir  mixed_archives_types.dir  mixed_scrambled_and_clear.dir  mixed_separators.dir  mixed_video_and_archive.dir  multi_version_movie.dir  multipart_par2_complex.dir  multipart_rar.dir  multiple_episodes.dir  multiple_qualifiers.dir  near_duplicates.dir  non_standard_archive.dir  numeric_stems.dir  par2_only.dir  scrambled_filenames.dir  seven_z_multipart.dir  single_rar_release.dir  single_video.dir  split_archive.dir  split_media.dir  (+8 more)
(+4 files in other folders)
