[project]
name = "mediacontainer"
version = "0.0.1"
description = "Identify, group, extract, and play media objects from a directory"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mediacontainer = "mediacontainer.cli:main"
